Fix to highlight nav correctly when viewing subscriptions
also fixes an issue where the create button text is cut off when creating operator catalog items.

--- a/frontend/public/components/catalog/_catalog.scss
+++ b/frontend/public/components/catalog/_catalog.scss
@@ -145,6 +145,8 @@ $catalog-item-icon-size-sm: 24px;
 
   &__overlay-create {
     margin-bottom: 20px;
+    overflow-x: hidden;
+    text-overflow: ellipsis;
     width: 100%;
   }
 
